--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@parse/react-native": "^0.0.1-alpha.18",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-mapbox-gl/maps": "^8.6.0-beta.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@rnmapbox/maps": "rnmapbox/maps#main",
+    "@taoqf/react-native-cookies": "^4.0.6",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-account-manager": "^1.0.10",
+    "react-native-cookies": "^3.3.0",
+    "react-native-device-info": "^8.7.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-login-screen": "^3.0.2",
