--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "4",
     "@parse/react-native": "^0.0.1-alpha.18",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-mapbox-gl/maps": "^8.6.0-beta.0",
@@ -26,12 +27,12 @@
     "react-native-cookies": "^3.3.0",
     "react-native-device-info": "^8.7.1",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "^2.4.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-login-screen": "^3.0.2",
-    "react-native-maps": "^0.31.1",
-    "react-native-reanimated": "^2.8.0",
-    "react-native-safe-area-context": "^4.2.5",
-    "react-native-screens": "^3.13.1",
+    "react-native-maps": "0.30.2",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-text-input-interactive": "^0.1.3",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4",
